2010-07-13  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-show-annotation): Ensure annotations show,
	e.g. in Info bookmarks, by using `switch-to-buffer-other-window'.
	Patch by Thierry Volpiatto (Bug#6444).

2010-07-13  Chong Yidong  <cyd@stupidchicken.com>

	* frame.el (make-frame): Fix typo in 2010-06-30 change (Bug#6625).

2010-07-13  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* term/ns-win.el: Bind M-~ to 'ns-prev-frame (due to Matthew
	Dempsky; bug#5084).  Remove incorrect binding for S-tab.
	(ns-alternatives-map): Change S-tab binding to backtab
	(bug#6616).

	* simple.el (normal-erase-is-backspace-setup-frame): Set mode on
	under ns.

2010-07-12  Andreas Schwab  <schwab@linux-m68k.org>

	* language/tai-viet.el ("TaiViet"): Try to fix re-encoding
	bugs. (Bug#5806)

	* language/tv-util.el (tai-viet-re): Remove format.

2010-07-12  Kenichi Handa  <handa@m17n.org>

	* language/hebrew.el: Remove no-byte-compile declaration.  Change
	coding: tag to utf-8.  Register hebrew-shape-gstring in
	composition-function-table for 3-character looking back.
	(hebrew-font-get-precomposed): New function.
	(hebrew-shape-gstring): Utilize precomposed glyphs if available.

2010-07-11  Chong Yidong  <cyd@stupidchicken.com>

	* mouse.el (mouse-drag-track): Handle select-active-regions
	(Bug#6612).

2010-07-11  Magnus Henoch  <magnus.henoch@gmail.com>

	* net/tramp-gvfs.el (tramp-gvfs-handle-copy-file): Do not pass
	empty argument to gvfs-copy.

2010-07-10  Aleksei Gusev  <aleksei.gusev@gmail.com>  (tiny change)

	* progmodes/compile.el (compilation-error-regexp-alist-alist): Add
	regexps for cucumber and ruby.

2010-07-08  Daiki Ueno  <ueno@unixuser.org>

	* epa-file.el (epa-file-error, epa-file--find-file-not-found-function)
	(epa-file-insert-file-contents): Hack to prevent
	find-file from opening empty buffer when decryptin failed
	(bug#6568).

2010-07-07  Agustín Martín  <agustin.martin@hispalinux.es>
